2000-02-23 14:00 GMT-5 David G. Holm <dholm@ sd-llc.com>
   * source/rtl/inkey.c
     ! KEYBOARD ";" now returns INKEY() == 13, just like Clipper.

20000223-18:36 GMT+1 Victor Szakats <info@szelvesz.hu>
   * source/rtl/tbrowse.prg
     ! Fixed return values of methods to be Clipper compatible.
   * source/vm/hvm.c
     + HB_INCLUDE_WINEXCHANDLER #ifdef added to control the inclusion of
       the Windows specific exception handler. Temporary solution.
   * contrib/rdd_ads/ads1.c
     ! Extentions converted to lower case.
     ! Some small fixes.
   * include/set.h
     source/rtl/set.c
     source/rtl/setcolor.c
     source/rtl/console.c
     source/rtl/gt/gtstd.c
     % Reduced the GT vs. non-GT branches. Heading in the direction where 
       there's no non-GT API mode, just a Standard/Stream GT API mode.
       In other words the point is to eliminate *all* HARBOUR_USE_GTAPI
       checks.
   * source/rtl/inkey.c    
     ! __KEYBOARD() fix by Matteo.
   * source/rtl/strings.c
     source/rtl/dummy.prg
     source/rtl/filesys.c
     source/rtl/oemansi.c
     ! Minor formatting fixes.

20000222-07:30 GMT-3 Luiz Rafael Culik <culik@sl.conex.net>
   *doc/harbext.txt
     *Small changes
   *source/rtl/filesys.c
     *Finish rewriting docs stolen from Clipper Ng
   *source/rtl/strings.c
   *source/rtl/oemansi.c
   *source/rtl/tlabel.prg
   *source/rtl/treport.prg
     + Add missing copyrigth for the docs
   *source/rdd/dbcmd.c
     *small changes to the docs
   *source/tools/html.prg
     *Changed to generate the new HTML template
   *utils/hbdoc/genhtm.prg
   *utils/hbdoc/hbdoc.prg
      *Changed to generate the new HTML template output
   
2000-02-21 15:45 GMT-5 David G. Holm <dholm@ sd-llc.com>
   * config/rules.cf
   * config/w32/bcc32.cf
   * config/w32/global.cf
     % Changes to make more compatible with all Windows 32-bit platforms

20000221-14:58 GMT+3 Alexander Kresin
   * source/pp/stdalone/hbpp.c
   * source/pp/hbppint.c
     * added cast
