@@ -1,3 +1,8 @@
+20000224-19:05 GMT+3 Alexander Kresin
+   * contrib/rdd_ads/ads1.c
+     * Corrected handling of bof()/eof()
+     * Fixed some warnings
+
 2000-02-23 14:00 GMT-5 David G. Holm <dholm@ sd-llc.com>
    * source/rtl/inkey.c
      ! KEYBOARD ";" now returns INKEY() == 13, just like Clipper.
